<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Encuadro 3.0b</string>
    <string name="action_settings">Configuración</string>
    <string name="action_prueba">Menú de prueba</string>
    <string name="title_activity_otrocoso">MainActivity</string>
    <string name="title_activity_contenido_obras">Contenido de Obras</string>
    <string name="title_activity_men_ppal">Busqueda Manual</string>
    <string name="title_activity_contenido_salas">Contenido de Salas</string>
    <string name="title_activity_contenido_zonas">Contenido de Zonas</string>
    <string name="title_activity_lista_obras">Lista de Obras</string>
    <string name="title_activity_lista_salas">Lista de Salas</string>
    <string name="title_activity_lista_zonas">Lista de Zonas</string>
    <string name="title_activity_men_ppal_auto">Busqueda por QR</string>
    <string name="manual">Manual</string>
    <string name="qr">Lectura QR</string>
    <string name="descripcion">Descripción</string>
    <string name="title_activity_reproducir_video">Reproducir Video</string>
    <string name="title_activity_raobra">RA Obra</string>
    <string name="title_activity_rasala">RA Sala</string>
    <string name="title_activity_estadistica">Estadistica</string>
    <string name="title_activity_loader">Loader</string>
    <string name="title_activity_progreso">Progreso</string>
    <string name="title_activity_puntajes">Puntajes</string>
    <string name="title_activity_cuetionario_final">Cuestionario Final</string><string name="btn_fin_juego">Finalizar Juego</string>
    <string name="btn_puntaje">Ver Puntajes</string>
    <string name="ultima_pista">Ultima Pista:</string>
    <string name="cant_obras">Obras: 0/0</string>
    <string name="tiempo">Tiempo: 00:00:00</string>
    

</resources>
